--- a/workshop-hpc.ipynb
+++ b/workshop-hpc.ipynb
@@ -6,133 +6,42 @@
    "source": [
     "# AIMRC Data Science Core Workshop on Using AHPCC\n",
     "\n",
-    "Before running this notebook, make sure you have the right packages installed in the environment you are using."
+    "Before running this notebook, make sure you have the right python packages/modules installed in the environment you are using.\n",
+    "\n",
+    "Link to Google Drive Data folder. Please download the data and save it somewhere on your AHPCC drive or on your local computer (if you don't have access to AHPCC).  \n",
+    "> https://drive.google.com/drive/folders/1_IlfCe9hak_ggr7v2aydl-Zg21vIep3K?usp=sharing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1: Running a simple Python script in Jupyter Notebook\n",
+    "## Exercise 1: Here we go!\n",
     "\n",
-    "In this exercise, we will run a simple Python script in Jupyter Notebook. The script will print \"Hello, World!\" to the console."
+    "In this exercise, you learned how to log into the Pinnacle Desktop and how to navigate the system. This exercise was done outside of the Jupyter notebook environment, of course."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "environ{'ALLUSERSPROFILE': 'C:\\\\ProgramData',\n",
-       "        'APPDATA': 'C:\\\\Users\\\\prateek\\\\AppData\\\\Roaming',\n",
-       "        'CHROME_CRASHPAD_PIPE_NAME': '\\\\\\\\.\\\\pipe\\\\crashpad_25292_NMBKSCQBWDYUKKZE',\n",
-       "        'COMMONPROGRAMFILES': 'C:\\\\Program Files\\\\Common Files',\n",
-       "        'COMMONPROGRAMFILES(X86)': 'C:\\\\Program Files (x86)\\\\Common Files',\n",
-       "        'COMMONPROGRAMW6432': 'C:\\\\Program Files\\\\Common Files',\n",
-       "        'COMPUTERNAME': 'JBHT-351',\n",
-       "        'COMSPEC': 'C:\\\\WINDOWS\\\\system32\\\\cmd.exe',\n",
-       "        'CONDA_DEFAULT_ENV': 'torchenv',\n",
-       "        'CONDA_EXE': 'C:\\\\Users\\\\prateek\\\\miniconda3\\\\Scripts\\\\conda.exe',\n",
-       "        'CONDA_PREFIX': 'C:\\\\Users\\\\prateek\\\\miniconda3\\\\envs\\\\torchenv',\n",
-       "        'CONDA_PROMPT_MODIFIER': '(torchenv) ',\n",
-       "        'CONDA_PYTHON_EXE': 'C:\\\\Users\\\\prateek\\\\miniconda3\\\\python.exe',\n",
-       "        'CONDA_ROOT': 'C:\\\\Users\\\\prateek\\\\miniconda3',\n",
-       "        'CONDA_SHLVL': '1',\n",
-       "        'DRIVERDATA': 'C:\\\\Windows\\\\System32\\\\Drivers\\\\DriverData',\n",
-       "        'EFC_3020': '1',\n",
-       "        'ELECTRON_RUN_AS_NODE': '1',\n",
-       "        'HOMEDRIVE': 'C:',\n",
-       "        'HOMEPATH': '\\\\Users\\\\prateek',\n",
-       "        'JPY_INTERRUPT_EVENT': '1568',\n",
-       "        'LOCALAPPDATA': 'C:\\\\Users\\\\prateek\\\\AppData\\\\Local',\n",
-       "        'LOGONSERVER': '\\\\\\\\JBHT-351',\n",
-       "        'NUMBER_OF_PROCESSORS': '20',\n",
-       "        'ONEDRIVE': 'D:\\\\OneDrive',\n",
-       "        'ONEDRIVECONSUMER': 'D:\\\\OneDrive',\n",
-       "        'ORIGINAL_XDG_CURRENT_DESKTOP': 'undefined',\n",
-       "        'OS': 'Windows_NT',\n",
-       "        'PATH': 'c:\\\\Users\\\\prateek\\\\miniconda3\\\\envs\\\\torchenv;C:\\\\Users\\\\prateek\\\\miniconda3\\\\envs\\\\torchenv;C:\\\\Users\\\\prateek\\\\miniconda3\\\\envs\\\\torchenv\\\\Library\\\\mingw-w64\\\\bin;C:\\\\Users\\\\prateek\\\\miniconda3\\\\envs\\\\torchenv\\\\Library\\\\usr\\\\bin;C:\\\\Users\\\\prateek\\\\miniconda3\\\\envs\\\\torchenv\\\\Library\\\\bin;C:\\\\Users\\\\prateek\\\\miniconda3\\\\envs\\\\torchenv\\\\Scripts;C:\\\\Users\\\\prateek\\\\miniconda3\\\\envs\\\\torchenv\\\\bin;C:\\\\Users\\\\prateek\\\\miniconda3\\\\condabin;C:\\\\WINDOWS\\\\system32;C:\\\\WINDOWS;C:\\\\WINDOWS\\\\System32\\\\Wbem;C:\\\\WINDOWS\\\\System32\\\\WindowsPowerShell\\\\v1.0;C:\\\\WINDOWS\\\\System32\\\\OpenSSH;C:\\\\Program Files\\\\Microsoft VS Code Insiders\\\\bin;C:\\\\Program Files\\\\Git\\\\cmd;C:\\\\Users\\\\prateek\\\\AppData\\\\Local\\\\Microsoft\\\\WindowsApps;C:\\\\Users\\\\prateek\\\\AppData\\\\Local\\\\Programs\\\\Microsoft VS Code Insiders\\\\bin;C:\\\\Users\\\\prateek\\\\AppData\\\\Local\\\\GitHubDesktop\\\\bin',\n",
-       "        'PATHEXT': '.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC',\n",
-       "        'PROCESSOR_ARCHITECTURE': 'AMD64',\n",
-       "        'PROCESSOR_IDENTIFIER': 'Intel64 Family 6 Model 85 Stepping 7, GenuineIntel',\n",
-       "        'PROCESSOR_LEVEL': '6',\n",
-       "        'PROCESSOR_REVISION': '5507',\n",
-       "        'PROGRAMDATA': 'C:\\\\ProgramData',\n",
-       "        'PROGRAMFILES': 'C:\\\\Program Files',\n",
-       "        'PROGRAMFILES(X86)': 'C:\\\\Program Files (x86)',\n",
-       "        'PROGRAMW6432': 'C:\\\\Program Files',\n",
-       "        'PROMPT': '(torchenv) $P$G',\n",
-       "        'PSMODULEPATH': 'C:\\\\Program Files\\\\WindowsPowerShell\\\\Modules;C:\\\\WINDOWS\\\\system32\\\\WindowsPowerShell\\\\v1.0\\\\Modules',\n",
-       "        'PUBLIC': 'C:\\\\Users\\\\Public',\n",
-       "        'PYDEVD_IPYTHON_COMPATIBLE_DEBUGGING': '1',\n",
-       "        'PYTHONIOENCODING': 'utf-8',\n",
-       "        'PYTHONUNBUFFERED': '1',\n",
-       "        'PYTHONUTF8': '1',\n",
-       "        'PYTHON_FROZEN_MODULES': 'on',\n",
-       "        'SESSIONNAME': 'Console',\n",
-       "        'SSL_CERT_FILE': 'C:\\\\Users\\\\prateek\\\\miniconda3\\\\envs\\\\torchenv\\\\Library\\\\ssl\\\\cacert.pem',\n",
-       "        'SYSTEMDRIVE': 'C:',\n",
-       "        'SYSTEMROOT': 'C:\\\\WINDOWS',\n",
-       "        'TEMP': 'C:\\\\Users\\\\prateek\\\\AppData\\\\Local\\\\Temp',\n",
-       "        'TMP': 'C:\\\\Users\\\\prateek\\\\AppData\\\\Local\\\\Temp',\n",
-       "        'USERDOMAIN': 'JBHT-351',\n",
-       "        'USERDOMAIN_ROAMINGPROFILE': 'JBHT-351',\n",
-       "        'USERNAME': 'prateek',\n",
-       "        'USERPROFILE': 'C:\\\\Users\\\\prateek',\n",
-       "        'VSCODE_AMD_ENTRYPOINT': 'vs/workbench/api/node/extensionHostProcess',\n",
-       "        'VSCODE_CODE_CACHE_PATH': 'C:\\\\Users\\\\prateek\\\\AppData\\\\Roaming\\\\Code - Insiders\\\\CachedData\\\\82104a3a6cf8713b81e5bbd97960dbf5c82a816a',\n",
-       "        'VSCODE_CRASH_REPORTER_PROCESS_TYPE': 'extensionHost',\n",
-       "        'VSCODE_CWD': 'C:\\\\Users\\\\prateek\\\\AppData\\\\Local\\\\Programs\\\\Microsoft VS Code Insiders',\n",
-       "        'VSCODE_HANDLES_UNCAUGHT_ERRORS': 'true',\n",
-       "        'VSCODE_IPC_HOOK': '\\\\\\\\.\\\\pipe\\\\9a6cf4da-1.92.0-insider-main-sock',\n",
-       "        'VSCODE_L10N_BUNDLE_LOCATION': '',\n",
-       "        'VSCODE_NLS_CONFIG': '{\"userLocale\":\"en-us\",\"osLocale\":\"en-us\",\"resolvedLanguage\":\"en\",\"defaultMessagesFile\":\"C:\\\\\\\\Users\\\\\\\\prateek\\\\\\\\AppData\\\\\\\\Local\\\\\\\\Programs\\\\\\\\Microsoft VS Code Insiders\\\\\\\\resources\\\\\\\\app\\\\\\\\out\\\\\\\\nls.messages.json\",\"locale\":\"en\",\"availableLanguages\":{}}',\n",
-       "        'VSCODE_PID': '25292',\n",
-       "        'WINDIR': 'C:\\\\WINDOWS',\n",
-       "        '_CONDA_OLD_CHCP': '437',\n",
-       "        '__CONDA_OPENSLL_CERT_FILE_SET': '\"1\"',\n",
-       "        'PYDEVD_USE_FRAME_EVAL': 'NO',\n",
-       "        'TERM': 'xterm-color',\n",
-       "        'CLICOLOR': '1',\n",
-       "        'FORCE_COLOR': '1',\n",
-       "        'CLICOLOR_FORCE': '1',\n",
-       "        'PAGER': 'cat',\n",
-       "        'GIT_PAGER': 'cat',\n",
-       "        'MPLBACKEND': 'module://matplotlib_inline.backend_inline'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# create a simple python script that prints information about the shell environment\n",
+    "## Exercise 2: Basic Shell Commands\n",
     "\n",
-    "import os\n",
-    "\n",
-    "os.environ"
+    "In this exercise, you learned about logging into the Pinnacle server using SSH and running basic shell commands. This exercise was done outside of the Jupyter notebook environment."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Host Name: JBHT-351\n",
-      "IP Address: 10.5.54.1\n"
-     ]
-    }
-   ],
    "source": [
-    "get_server_info()"
+    "## Exercise 3: What have I gotten myself into?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get basic information about the hardware"
    ]
   },
   {
@@ -140,7 +49,164 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# we import psutil that allows us to interact with the system processes\n",
+    "import psutil\n",
+    "\n",
+    "# print the number of CPU cores available and the percent usage\n",
+    "print(\"Number of CPU cores:\", psutil.cpu_count())\n",
+    "print(\"CPU usage:\", psutil.cpu_percent(interval=1), \"%\")\n",
+    "\n",
+    "# print the total and used memory on the system\n",
+    "memory = psutil.virtual_memory()\n",
+    "print(\"Total memory:\", memory.total / (1024 * 1024 * 1024), \"GB\")\n",
+    "print(\"Used memory:\", memory.used / (1024 * 1024 * 1024), \"GB\")\n",
+    "\n",
+    "# print the amount of GPU memory on the system\n",
+    "gpu_memory = psutil.virtual_memory()\n",
+    "print(\"Total GPU memory:\", gpu_memory.total / (1024 * 1024 * 1024), \"GB\")\n",
+    "print(\"Used GPU memory:\", gpu_memory.used / (1024 * 1024 * 1024), \"GB\")\n",
+    "\n",
+    "# print the storage information on the system\n",
+    "disk_partitions = psutil.disk_partitions()\n",
+    "for d_p in disk_partitions:\n",
+    "    print(\"Device: \" + d_p.device + \"; \"\n",
+    "          \"Mountpoint: \" + d_p.mountpoint + \"; \"\n",
+    "          \"File system type: \" + d_p.fstype)\n",
+    "disk_usage = psutil.disk_usage('/')\n",
+    "print(\"Total disk space:\", disk_usage.total / (1024 * 1024 * 1024), \"GB\")\n",
+    "print(\"Used disk space:\", disk_usage.used / (1024 * 1024 * 1024), \"GB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can get detailed information about the Nvidia GPU by using the nvidia-smi utility.  \n",
+    "Note that you can use shell commands in Jupyter Notebooks by prefixing the command with an exclamation mark (!)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get information about the packages installed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print the list of packages installed in the current environment\n",
+    "!conda list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4: Running a simple Python script in Jupyter Notebook\n",
+    "\n",
+    "In this exercise, we will run a simple Python program in Jupyter Notebook. We write a program to crop images and save the cropped images in a new folder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import PIL.Image as Image\n",
+    "\n",
+    "DATA_FOLDER = 'PATH/TO/DATA'\n",
+    "TARGET_FOLDER = 'PATH/TO/TARGET'\n",
+    "\n",
+    "# Create target folder if it does not exist\n",
+    "Path(TARGET_FOLDER).mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the list of all files in the source folder\n",
+    "files = list(Path(DATA_FOLDER).rglob('*.jpg'))\n",
+    "print(len(files))\n",
+    "\n",
+    "# get the dimension of the first image\n",
+    "img = Image.open(files[0])\n",
+    "print(img.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the cropping function\n",
+    "def crop_image(file, data_folder, target_folder):\n",
+    "    img = Image.open(file)\n",
+    "    img = img.crop((0, 0, 1024, 600))\n",
+    "    # save the cropped image in the target folder matching the subfolder structure\n",
+    "    save_to_path = str(file).replace(data_folder, target_folder)\n",
+    "    # make sure the subfolder exists\n",
+    "    Path(save_to_path).parent.mkdir(parents=True, exist_ok=True)\n",
+    "    img.save(save_to_path)\n",
+    "    print('saved ' + save_to_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# crop all images\n",
+    "for file in files:\n",
+    "    crop_image(file, DATA_FOLDER, TARGET_FOLDER)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 5: Running jobs on the Pinnacle cluster\n",
+    "\n",
+    "In this exercise, you learned about logging into the Pinnacle server using (1) the OOD and creating and running simple jobs, and (2) SSH and creating and running simple jobs. This exercise was done outside of the Jupyter notebook environment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 6: Fiji\n",
+    "\n",
+    "In this exercise, you learned about logging into the Pinnacle Desktop, browsing the internet, downloading and installing Fiji and using Fiji to open and process an image file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 7: A machine learning experiment\n",
+    "\n",
+    "In this exercise, we write a simple machine learning program to classify the images you downloaded from the Google Drive folder. We will train a simple CNN model to classify the images."
+   ]
   }
  ],
  "metadata": {
