updated workshop files

--- a/workshops/ahpcc/workshop-hpc.ipynb
+++ b/workshops/ahpcc/workshop-hpc.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "- Link to [Google Drive Data folder](https://drive.google.com/drive/folders/1_IlfCe9hak_ggr7v2aydl-Zg21vIep3K?usp=sharing). Please download the `workshop-hpc-data` folder.\n",
     "- Link to [Github Repository](https://github.com/pv-is-nrt/aimrc-data-science-core). Please download the repository by going to Code (green button) > Download ZIP.\n",
-    "- Link to [download PuTTY Installer](https://the.earth.li/~sgtatham/putty/latest/w64/putty-64bit-0.81-installer.msi) for Windows"
+    "- Link to [download PuTTY Installer](https://the.earth.li/~sgtatham/putty/latest/w64/putty-64bit-0.81-installer.msi) for Windows\n",
+    "- Link to [download Fiji](https://downloads.imagej.net/fiji/latest/fiji-linux64.zip) for Linux"
    ]
   },
   {
@@ -587,50 +588,19 @@
    "source": [
     "## Exercise 5: Running jobs on the Pinnacle cluster\n",
     "\n",
-    "In this exercise, you learned about logging into the Pinnacle server using: \n",
-    "- the Pinnacle Desktop interface and creating and running simple jobs, and \n",
-    "- SSH and creating and running simple jobs.  \n",
+    "In this exercise, you learned about submitting jobs to the Pinnacle server through the SSH terminal. This exercise was done outside of the Jupyter notebook environment.\n",
     "\n",
-    "This exercise was done outside of the Jupyter notebook environment."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import PIL.Image as Image\n",
-    "\n",
-    "DATA_FOLDER = '/home/prateek/Downloads/NFFA images sampled'\n",
-    "TARGET_FOLDER = '/home/prateek/Downloads/NFFA images sampled cropped'\n",
-    "\n",
-    "# Create target folder if it does not exist\n",
-    "Path(TARGET_FOLDER).mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "# get the list of all files in the source folder\n",
-    "files = list(Path(DATA_FOLDER).rglob('*.jpg'))\n",
-    "print(len(files), 'total files found')\n",
-    "\n",
-    "# get the dimension of the first image\n",
-    "img = Image.open(files[0])\n",
-    "print('Dimensions of the first image:', img.size)\n",
-    "\n",
-    "# define the cropping function\n",
-    "def crop_image(file, data_folder, target_folder):\n",
-    "    img = Image.open(file)\n",
-    "    img = img.crop((0, 0, 1024, 600))\n",
-    "    # save the cropped image in the target folder matching the subfolder structure\n",
-    "    save_to_path = str(file).replace(data_folder, target_folder)\n",
-    "    # make sure the subfolder exists\n",
-    "    Path(save_to_path).parent.mkdir(parents=True, exist_ok=True)\n",
-    "    img.save(save_to_path)\n",
-    "    print('saved ' + save_to_path)\n",
-    "\n",
-    "# crop all images\n",
-    "for file in files:\n",
-    "    crop_image(file, DATA_FOLDER, TARGET_FOLDER)"
+    "Make sure you:\n",
+    "- changed into the /workshops/ahpcc directory  \n",
+    "    `cd /home/USERNAME/Downloads/aimrc-data-science-core-main/workshops/ahpcc`\n",
+    "- activate base environment  \n",
+    "    `module load python/3.10-anaconda`  \n",
+    "    `which python`  \n",
+    "    `source /share/apps/bin/conda-3.10.sh`  \n",
+    "- submit a Python script as a job (independent of previous jobs)  \n",
+    "    `sinfo`  \n",
+    "    `squeue`  \n",
+    "    `sbatch --partition condo --constraint 'aimrc' --nodes=1 myjob.sh`  "
    ]
   },
   {
@@ -639,7 +609,11 @@
    "source": [
     "## Exercise 6: Fiji\n",
     "\n",
-    "In this exercise, you learned about logging into the Pinnacle Desktop, browsing the internet, downloading and installing Fiji and using Fiji to open and process an image file."
+    "In this exercise, you learned about logging into the Pinnacle Desktop, browsing the internet, downloading and installing Fiji and using Fiji to open and process an image file.\n",
+    "\n",
+    "Make sure you:\n",
+    "- Downloaded (link at the top) and installed Fiji\n",
+    "- Used one of the NFFA microscopy images to do an image processing of your choice in Fiji and saved the result."
    ]
   },
   {
@@ -649,26 +623,6 @@
     "## Exercise 7: A machine learning experiment\n",
     "\n",
     "In this exercise, we write a simple machine learning program to classify the images you downloaded from the Google Drive folder. We will train a simple CNN model to classify the images."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# let's import the necessary libraries\n",
-    "import tensorflow as tf\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_FOLDER = \"D:\\\\OneDrive\\\\Work\\\\_current\\\\Data\\\\NFFA SEM\\\\sampled_data\""
    ]
   }
  ],
