updated workshop files

--- a/workshops/ahpcc/workshop-hpc.ipynb
+++ b/workshops/ahpcc/workshop-hpc.ipynb
@@ -265,8 +265,8 @@
     "from pathlib import Path\n",
     "import PIL.Image as Image\n",
     "\n",
-    "DATA_FOLDER = '/home/prateek/Downloads/NFFA images sampled'\n",
-    "TARGET_FOLDER = '/home/prateek/Downloads/NFFA images sampled cropped'\n",
+    "DATA_FOLDER = '/home/prateek/Downloads/workshop-hpc-data/NFFA images sampled'\n",
+    "TARGET_FOLDER = '/home/prateek/Downloads/workshop-hpc-data/NFFA images sampled cropped'\n",
     "\n",
     "# Create target folder if it does not exist\n",
     "Path(TARGET_FOLDER).mkdir(parents=True, exist_ok=True)"
@@ -600,7 +600,7 @@
     "- submit a Python script as a job (independent of previous jobs)  \n",
     "    `sinfo`  \n",
     "    `squeue`  \n",
-    "    `sbatch --partition condo --constraint 'aimrc' --nodes=1 myjob.sh`  "
+    "    `sbatch --partition pcon06 --constraint 'aimrc' --nodes=1 myjob.sh`  "
    ]
   },
   {
@@ -612,8 +612,9 @@
     "In this exercise, you learned about logging into the Pinnacle Desktop, browsing the internet, downloading and installing Fiji and using Fiji to open and process an image file.\n",
     "\n",
     "Make sure you:\n",
-    "- Downloaded (link at the top) and installed Fiji\n",
-    "- Used one of the NFFA microscopy images to do an image processing of your choice in Fiji and saved the result."
+    "- Downloaded (link at the top) and extracted Fiji\n",
+    "- Launched `Fiji` executable file\n",
+    "- Used one of the NFFA microscopy images to do an image processing of your choice in Fiji and saved your result in your Documents folder."
    ]
   },
   {
