updated workshop files

--- a/workshops/hpc/workshop-hpc.ipynb
+++ b/workshops/hpc/workshop-hpc.ipynb
@@ -147,7 +147,8 @@
    "outputs": [],
    "source": [
     "# print the list of packages installed in the current environment\n",
-    "!conda list"
+    "# !conda list # OR\n",
+    "!pip list"
    ]
   },
   {
@@ -254,6 +255,7 @@
     "    - `sbatch --partition agpu06 --nodes=1 myjob.sh` OR  \n",
     "    - `sbatch --partition gpu72 --nodes=1 myjob.sh`\n",
     "- If your job is taking too long to start, you may want to cancel it and use another partition/constraint  \n",
+    "    `squeue -u <yourusername>` will show only your jobs  \n",
     "    `scancel <jobid>`\n",
     "- Observe the `slurm-xxxxxx.out` file in the directory for script output (best observed through Jupyter)\n",
     "- Observe the `/home/USERNAME/Downloads/workshop-hpc-data/NFFA images sampled cropped/` directory for cropped images (best observed through Pinnacle Desktop) "
@@ -291,8 +293,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# you'll probably need to install matplotlib for the first time\n",
-    "!pip install matplotlib"
+    "# you'll probably need to install matplotlib and scipy for the first time\n",
+    "!pip install matplotlib\n",
+    "!pip install scipy"
    ]
   },
   {
@@ -306,7 +309,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# try to suppress tensorflow warnings\n",
-    "tf.compat.v1.logging.set_verbosity(tf.compat.v1.logging.ERROR)"
+    "tf.compat.v1.logging.set_verbosity(tf.compat.v1.logging.ERROR)\n",
+    "\n",
+    "# IGNORE TENSORFLOW WARNING IN RED for now. As long as the code finishes running, it's fine."
    ]
   },
   {
@@ -448,7 +453,10 @@
     "\n",
     "# prepare a training dataset from the images\n",
     "\n",
+    "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras import datasets, layers, models\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "train_datagen = ImageDataGenerator(rescale=1./255)\n",
     "train_generator = train_datagen.flow_from_directory(\n",
