updated workshop files

--- a/workshops/hpc/workshop-hpc.ipynb
+++ b/workshops/hpc/workshop-hpc.ipynb
@@ -271,7 +271,7 @@
     "\n",
     "Make sure you:\n",
     "- Download (link at the top) and extract Fiji\n",
-    "- Launch `Fiji` executable file\n",
+    "- Launch `ImageJ` executable file\n",
     "- Use one of the NFFA microscopy images to do an image processing of your choice in Fiji and save your result in your Documents folder."
    ]
   },
