updated notebook file

--- a/workshops/dl-bioimaging/workshop-dl-bioimaging.ipynb
+++ b/workshops/dl-bioimaging/workshop-dl-bioimaging.ipynb
@@ -12,15 +12,13 @@
         "> Notebook created for Data Science Core Workshop Series, AIMRC @ U Arkansas  \n",
         "> This Notebook is designed to run in Google Colab.\n",
         "\n",
-        "Welcome to the Deep Learning in Bioimaging Workshop! In this workshop, we will explore various deep learning techniques and apply them to biomedical images using Fiji (ImageJ) and Google Colab. This workshop is designed for beginners, so don't worry if you are new to deep learning or bioimaging.\n",
+        "Welcome to the Deep Learning in Bioimaging Workshop! In this workshop, we will explore various deep learning techniques and apply them to biomedical images using Fiji (ImageJ) and Google Colab. This workshop is designed to be executed by beginners, so don't worry if you are new to deep learning or bioimaging. Even if you don't understand the code, you will get familiar with the concepts and the workflow for applying state-of-the art deep learning techniques to bioimaging.\n",
         "\n",
         "We will cover the following exercises:\n",
-        "1. Image Classification (Google Colab)\n",
+        "1. Image Classification (CNN, Google Colab)\n",
         "2. Image Segmentation (Fiji)\n",
-        "3. Cell Counting (Google Colab)\n",
-        "4. Image Denoising (Fiji)\n",
-        "\n",
-        "Let's dive in and start with Exercise 1!"
+        "3. Image Segmentation (U-Net, Google Colab)\n",
+        "4. Image Denoising (ZeroCostDL4Mic, Google Colab)"
       ]
     },
     {
@@ -85,7 +83,7 @@
       "source": [
         "### 2. Load the dataset in to memory\n",
         "\n",
-        "Now that the dataset is available on disk, we will load it into memory as train, test, and validation sets."
+        "Now that the dataset is available, we will load it into memory as train, test, and validation sets."
       ]
     },
     {
@@ -489,7 +487,7 @@
         "- How to use Bioimage.io model repository to download pre-trained deep learning models\n",
         "- How to run deep learning models to your images\n",
         "\n",
-        "**Author's note**: There are many pros and cons of using Fiji and plugins such as DeepImageJ. This is a quick way to get started with deep learning in bioimaging without writing any code. It is a good way to stay up-to-date on prevalant tasks and models in the BioImaging community. However, you will soon realize that many of these models become outdated and incompatible (because of various software and environment that end users use) quickly and are plagued with overly-complicated code because they want to generalize to a larger audience. As you will learn in this workshop, it is possible to write simple, clean and effective Python code for your own project using libraries like TensorFlow, PyTorch, etc. to carry out similar tasks."
+        "**Author's note**: There are many pros and cons of using Fiji and plugins such as DeepImageJ. This is a quick way to get started with deep learning in bioimaging without writing any code. This is also a good way to stay up-to-date on popular tasks and models in the BioImaging community. However, you will soon realize that many of these models become outdated and incompatible (because of various software and environment that end users use) quickly and might be overly-complicated for your need because they try to generalize to a larger audience. The last point is especially true for open source deep-learning tools such as ZeroCostDL4Mic (covered later in the workshop). As you will learn in this workshop, it is possible to write simple, clean and effective Python code for your own project using libraries like TensorFlow, PyTorch, etc. to carry out similar tasks."
       ]
     },
     {
@@ -500,11 +498,14 @@
       "source": [
         "## Exercise 3: Image Segmentation with U-Net (Google Colab)\n",
         "\n",
-        "In this exercise, we will build a U-Net model for image segmentation using the Kvasir-SEG dataset, which contains gastrointestinal polyp images and their corresponding segmentation masks.\n",
-        "\n",
-        "### Step 1: Importing Libraries\n",
-        "\n",
-        "First, let's import the necessary libraries."
+        "In this exercise, we will build a U-Net model for image segmentation using the Kvasir-SEG dataset, which contains gastrointestinal polyp images and their corresponding segmentation masks."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Import necessary libraries"
       ]
     },
     {
@@ -533,7 +534,7 @@
         "id": "_RlLomgQlWAh"
       },
       "source": [
-        "### Step 2: Downloading and Extracting the Dataset\n",
+        "### Download and extract the dataset\n",
         "\n",
         "We will use the Kvasir-SEG dataset for this exercise. Let's download and extract the dataset."
       ]
@@ -564,7 +565,7 @@
         "id": "-cRyeD3X6RaJ"
       },
       "source": [
-        "### Step 3: Loading the Dataset\n",
+        "### Load the dataset\n",
         "\n",
         "Let's load the images and masks from the extracted dataset."
       ]
@@ -640,7 +641,7 @@
         "id": "TE2jrbkZ6b13"
       },
       "source": [
-        "### Step 4: Building the U-Net Model\n",
+        "### Build the U-Net model\n",
         "\n",
         "We will build a U-Net model for image segmentation."
       ]
@@ -797,14 +798,14 @@
         "id": "gyEvJPNh6sRZ"
       },
       "source": [
-        "### Step 5: Training the Model\n",
+        "### Train the model\n",
         "\n",
         "Now, we will train the model using the training data."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -812,21 +813,7 @@
         "id": "nyKrpqJevobR",
         "outputId": "e8736c9c-1f14-40e0-f53d-ca7292c28d59"
       },
-      "outputs": [
-        {
-          "ename": "ValueError",
-          "evalue": "`y` argument is not supported when using `keras.utils.Sequence` as input.",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m history \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrain_image_generator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_mask_generator\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m25\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mvalidation_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mval_images\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_masks\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m)\u001b[49m\n",
-            "File \u001b[1;32mc:\\Users\\prateek\\miniconda3\\envs\\tfenv\\lib\\site-packages\\keras\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-            "File \u001b[1;32mc:\\Users\\prateek\\miniconda3\\envs\\tfenv\\lib\\site-packages\\keras\\engine\\data_adapter.py:997\u001b[0m, in \u001b[0;36mKerasSequenceAdapter.__init__\u001b[1;34m(self, x, y, sample_weights, shuffle, workers, use_multiprocessing, max_queue_size, model, **kwargs)\u001b[0m\n\u001b[0;32m    984\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[0;32m    985\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m    986\u001b[0m     x,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    994\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs\n\u001b[0;32m    995\u001b[0m ):\n\u001b[0;32m    996\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_none_or_empty(y):\n\u001b[1;32m--> 997\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    998\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`y` argument is not supported when using \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    999\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`keras.utils.Sequence` as input.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1000\u001b[0m         )\n\u001b[0;32m   1001\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_none_or_empty(sample_weights):\n\u001b[0;32m   1002\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   1003\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`sample_weight` argument is not supported when using \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1004\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`keras.utils.Sequence` as input.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1005\u001b[0m         )\n",
-            "\u001b[1;31mValueError\u001b[0m: `y` argument is not supported when using `keras.utils.Sequence` as input."
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "history = model.fit(\n",
         "    train_images, train_masks,\n",
@@ -842,7 +829,7 @@
         "id": "Ebg54pgq61c4"
       },
       "source": [
-        "### Step 6: Evaluating the Model\n",
+        "### Evaluate the results\n",
         "\n",
         "Finally, we will evaluate the model's performance on the validation data."
       ]
@@ -893,7 +880,7 @@
         "id": "iTM6k8-t6_Kb"
       },
       "source": [
-        "### Visualizing Segmentation Results\n",
+        "#### Visualize segmentation results\n",
         "\n",
         "Let's visualize some example segmentation results."
       ]
@@ -954,29 +941,32 @@
       "source": [
         "## Exercise 4: Denoising using CARE (via ZeroCostDL4Mic)\n",
         "\n",
-        "In this exercise, we will use the CARE (Content-Aware Image Restoration) neural network to denoise biomedical images. We will follow the Notebook implementation of ZeroCostDL4Mic, a platform that provides free access to deep learning models for bioimaging.\n",
+        "In this exercise, we will use the CARE (Content-Aware Image Restoration) neural network to denoise biomedical images. We will follow the Notebook implementation of ZeroCostDL4Mic directly, a platform that provides free access to deep learning models for bioimaging.\n",
         "\n",
-        "1. Please click here to open the ZeroCostDL4Mic notebook in a new Google Colab window: [CARE_2D_ZeroCostDL4Mic.ipynb](https://colab.research.google.com/github/HenriquesLab/ZeroCostDL4Mic/blob/master/Colab_notebooks/CARE_2D_ZeroCostDL4Mic.ipynb)\n",
-        "2. Delete the current Google Colab session. Go to `Runtime > Manage Sessions` and delete the current session. This is because you can only run one session at a time on the free tier.\n",
-        "3. Create a copy of the ZeroCostDL4Mic notebook by going to `File > Save a copy in Drive`.\n",
+        "1. Please click [here](https://colab.research.google.com/github/HenriquesLab/ZeroCostDL4Mic/blob/master/Colab_notebooks/CARE_2D_ZeroCostDL4Mic.ipynb) to open the ZeroCostDL4Mic notebook in a new Google Colab window.\n",
+        "2. Delete the current Google Colab session.  \n",
+        "Go to `Runtime > Manage Sessions` and delete the current session.  \n",
+        "This is because you can only run one notebook at a time on the free tier.\n",
+        "3. Create a copy of the ZeroCostDL4Mic notebook.  \n",
+        "`File > Save a copy in Drive`.\n",
         "4. Follow the instructions in the ZeroCostDL4Mic notebook.\n",
         "\n",
         "### Steps to upload denoising dataset to your Google Drive.\n",
-        "1. Click this link to download the dataset: [Denoising_Dataset.zip](https://zenodo.org/records/5750174/files/Denoising_Dataset.zip?download=1) to your local computer.\n",
+        "1. Click [this link](https://zenodo.org/records/5750174/files/Denoising_Dataset.zip?download=1) to download the Denoising dataset to your local computer.\n",
         "2. Extract the downloaded zip file to your local computer.\n",
         "3. In your Google Drive page in your browser, go to `+ New > Folder upload` and upload the extracted `Denoising_Dataset` folder.\n",
         "\n",
-        "### Things to change / enter in the `CARE_2D_ZeroCostDL4Mic.ipynb` notebook:\n",
+        "### Things to change/enter in the notebook:\n",
         "\n",
-        "You might need to adjust these based on where you uploaded the dataset in your Google Drive.\n",
-        "```\n",
-        "Training_source: /content/gdrive/MyDrive/Denoising_Dataset/Training/low\n",
-        "Training_target: /content/gdrive/MyDrive/Denoising_Dataset/Training/high\n",
-        "model_name: denoising_model\n",
-        "model_path: /content/gdrive/MyDrive/Denoising_Dataset/Results\n",
-        "number_of_epochs: 1 # You can increase this number if you have time or if you are connected to the GPU kernel\n",
+        "You might need to adjust some of these based on where you uploaded the dataset in your Google Drive.\n",
         "\n",
-        "Use_Data_augmentation: # check this box\n",
+        "```python\n",
+        "    Training_source: /content/gdrive/MyDrive/Denoising_Dataset/Training/low\n",
+        "    Training_target: /content/gdrive/MyDrive/Denoising_Dataset/Training/high\n",
+        "    model_name: denoising_model\n",
+        "    model_path: /content/gdrive/MyDrive/Denoising_Dataset/Results\n",
+        "    number_of_epochs: 1 # you can increase this number if you have time and/or you are connected to the GPU kernel\n",
+        "    Use_Data_augmentation: # check this box\n",
         "```"
       ]
     }
